--- a/ToDoListT2/Forms/FloatingContainerForm.resx
+++ b/ToDoListT2/Forms/FloatingContainerForm.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnMinimize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAAN0lEQVQ4T2MYBYMB/P//XwaIk4A4jUQM0iMNMuAmEJMLblJqwA2QAdJATK4XpKAhMQoGEDAwAACm
+        6uoMw43DvgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAAsklEQVQ4T6WT7Q3CMAxEO0s2QELsP0P5T1kAwQbhXWqDaWNVCk9yZfnOTr881VoLcSXuxHk6QB7z
+        qqeooMR5EukQaeZxZhWXNf/QHaKaaZFbJvwMUW61yNdDciIeqgZexIVItdbsUMhOyU/egtA7LbI/eQuG
+        bMhxs8A0PgDD+CMgjL9ECumnIlLNm//7kbhoMSL7WwTVTIssEuY1b3SbHWnmcdoyaZ01REuVNjvymJee
+        Wt59q5VA/w8ITgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
