--- a/ToDoListT2/Forms/EditUserForm.resx
+++ b/ToDoListT2/Forms/EditUserForm.resx
@@ -117,4 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAccept.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAASlJREFUSEvtk71KA0EURheCBJUQLBRRfIFgk0YRgla2Pk1aS8EmhY2Fpa1gGmtL
+        O0EtQhQRtLNXEEXXM5cvzOxiltVZrHLgsOz9+YYNmWTCv5Cm6Ro+4j7WVa4GAmfwFkfc4Jza8RB2YLGe
+        L2ypHQdBHfx0qQGHasdB0CzeW6TnARsaiYOgI4v0uC/ZUjsOgrbR/dYhPbXjIKiJTxbpGeK0RophcAO7
+        OKVSBurHGPKB62oXw+AmvrgtOMPMpeF9xzpZ9tQuhsEFfLUVzynal/Ccx2dXDLjGcjeXwfyNHGGH4Im9
+        ed6xrfVysLCMd247x5WeIbta+x0sLuLAIsZziT/+CUrBctEhb7iq0b9DyLhDuhqJh7D8IRdYU7saCFzC
+        Pp7jisoTqiJJvgFQfxl+HiJfqQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACySURBVDhPpZPt
+        DcIwDEQ7SzZAQuw/Q/lPWQDBBuFdaoNpY1UKT3Jl+c5OvzzVWgtxJe7EeTpAHvOqp6igxHkS6RBp5nFm
+        FZc1/9AdopppkVsm/AxRbrXI10NyIh6qBl7EhUi11uxQyE7JT96C0Dstsj95C4ZsyHGzwDQ+AMP4IyCM
+        v0QK6aciUs2b//uRuGgxIvtbBNVMiywS5jVvdJsdaeZx2jJpnTVES5U2O/KYl55a3n2rlUD/DwhOAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
